--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -57,3 +57,15 @@
   top: -57px;
   right: -78px;
 }
+
+.promo__scroll-link {
+  position: absolute;
+  left: -34px;
+  bottom: 126px;
+  transform: rotate(-90deg);
+
+  @include ptmono (14px, 16px);
+  opacity: 0.5;
+  color: $white;
+  text-decoration: none;
+}
