--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,18 +14,72 @@
   padding: 0;
 }
 
-.contacts__item {
-  &:not(:last-child) {
-    margin-right: 91px;
-  }
+.contacts__item:not(:last-child) {
+  margin-right: 91px;
 }
 
 .contacts__link {
+  display: block;
+
   text-decoration: none;
   color: $white;
+
+  svg {
+    margin-right: 6px;
+    vertical-align: middle;
+  }
 }
 
-.contacts__link-img {
-  margin-right: 6px;
-  vertical-align: middle;
+@media (max-width: $tablet-width) {
+  .contacts__list {
+    margin-right: 0;
+    position: relative;
+
+    &::before {
+      position: absolute;
+      top: 3px;
+      left: -74px;
+      width: 37px;
+      height: 11px;
+      border-top: 1px solid $white;
+      border-bottom: 1px solid $white;
+
+      content: "";
+    }
+  }
+
+  .contacts__item:not(:last-child) {
+    margin-right: 28px;
+  }
+
+
+  .contacts__link {
+    font-size: 0;
+    line-height: 0;
+
+    &--email svg {
+      width: 25.33px;
+      height: 18.67px;
+    }
+
+    &--phone svg {
+      margin-right: 0;
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  .contacts__btn {
+    display: none;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .contacts__list::before {
+    left: -65px;
+  }
+
+  .contacts__item:not(:last-child) {
+    margin-right: 16px;
+  }
 }
