--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "normalize.scss";
 @import "mixins.scss";
 @import "blocks/page-header.scss";
+@import "blocks/wrapper.scss";
 @import "blocks/contacts.scss";
 @import "blocks/button.scss";
 @import "blocks/promo.scss";
