--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -1,17 +1,17 @@
 
 .wrapper {
-  margin-right: 13.4%;
-  margin-left: 13.1%;
+  padding-right: 13.4%;
+  padding-left: 13.1%;
 }
 
 @media (max-width: $tablet-width) {
   .wrapper {
-    margin: 0 25px;
+    padding: 0 25px;
   }
 }
 
 @media (max-width: $mobile-width) {
   .wrapper {
-    margin: 0 17px;
+    padding: 0 17px;
   }
 }
