--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,6 @@
 @import "blocks/contacts.scss";
 @import "blocks/button.scss";
 @import "blocks/promo.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
