--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -18,3 +18,18 @@
   font-size: $font-size;
   line-height: $line-height;
 }
+
+@mixin wrapping() {
+  padding-right: 13.4%;
+  padding-left: 13.1%;
+
+  @media (max-width: $tablet-width) {
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-right: 17px;
+    padding-left: 17px;
+  }
+}
