footer mobile без аккордеона

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -31,10 +31,28 @@
 @media (max-width: $tablet-width) {
   .copyright {
     display: flex;
+    justify-content: space-between;
+    padding-top: 29px;
+    padding-bottom: 26px;
   }
 
   .copyright__rights,
   .copyright__term {
     display: none;
+  }
+
+  .copyright__dev {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .copyright {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .copyright__conditions {
+    margin-bottom: 21px;
   }
 }
