--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -68,7 +68,6 @@
   @include wrapping;
   padding-top: 14px;
   padding-bottom: 14px;
-
 }
 
 @media (min-width: $tablet-width + 1) {
@@ -77,13 +76,26 @@
   }
 }
 
+@media (min-width: $mobile-width + 1) and (max-width: $tablet-width) {
+  .page-footer__wrapper {
+    width: 100%;
+
+    @include wrapping;
+    display: flex;
+  }
+}
+
 @media (max-width: $tablet-width) {
+  .page-footer {
+    padding-top: 0;
+  }
+
   .page-footer__top {
     padding-bottom: 35px;
   }
 
-  .page-footer {
-    padding-top: 0;
+  .page-footer__wrapper {
+    width: 100%;
   }
 
   .page-footer__columns {
@@ -120,16 +132,8 @@
     font-size: 0;
   }
 
-  .page-footer__wrapper {
-    width: 100%;
-
-    @include wrapping;
-    padding-top: 38px;
-    display: flex;
-  }
-
   .page-footer__col {
-    width: 100%;
+    padding-top: 38px;
   }
 
   .page-footer__menu {
@@ -143,7 +147,48 @@
   .page-footer__copyright {
     padding-top: 19px;
     padding-bottom: 19px;
-
   }
 }
 
+@media (max-width: $mobile-width) {
+  .page-footer__top {
+    padding-bottom: 0;
+    border: none;
+  }
+
+  .page-footer__intro {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 45px;
+    padding-bottom: 51px;
+
+    span {
+      margin: 0 0 30px 0;
+    }
+  }
+
+  .page-footer__logo {
+    margin-bottom: 27px;
+  }
+
+  .page-footer__col {
+    border-bottom: 1px solid rgba($grey, 0.2);
+
+    @include wrapping;
+    padding-top: 30px;
+    padding-bottom: 23px;
+  }
+
+  .page-footer__menu {
+    margin-right: 0;
+  }
+
+  .page-footer__contacts {
+    margin: 0;
+  }
+
+  .page-footer__title {
+    margin-bottom: 34px;
+    padding-left: 0;
+  }
+}
