footer доделан, фикс с заменой текста в кнопке promo

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -32,5 +32,14 @@
   .button--big {
     width: 100%;
     box-sizing: border-box;
+    position: relative;
+    font-size: 0;
+
+    &::before {
+      vertical-align: middle;
+
+      @include roboto-bold(16px, 19px);
+      content: "Бесплатная консультация";
+    }
   }
 }
