--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -30,6 +30,11 @@
   justify-content: space-between;
 }
 
+.page-footer__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
 .page-footer__intro {
   margin-right: 11.5%;
   display: flex;
