--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,7 +2,9 @@ $blue: #00b2ff;
 $dark-blue: #1b2d37;
 $white: #ffffff;
 $grey: #626962;
+$dark-grey: #666666;
 $light-grey :#c4c4c4;
+$lighter-grey: #ebebeb;
 
 $mobile-width: 767px;
 $tablet-width: 1023px;
