--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -12,6 +12,17 @@
 
   padding: 14px 26px;
 
+  &:hover {
+    color: lighten($blue, 30%);
+    border-color: lighten($blue, 30%);
+  }
+
+  &:active,
+  &:focus {
+    color: rgba($white, 0.6);
+    border-color: rgba($white, 0.6);
+  }
+
   &--big {
     display: inline-block;
     padding: 18px 46px;
@@ -19,16 +30,34 @@
     @include roboto-bold(16px, 19px);
     background-color: $blue;
     border: none;
+
+    &:hover {
+      color: $white;
+      background-color: lighten($blue, 10%);
+    }
+
+    &:active,
+    &:focus {
+      color: rgba($white, 0.6);
+      border-color: rgba(lighten($blue, 10%), 0.6);
+    }
+  }
+
+  &--about {
+    display: inline-block;
+    padding: 14px 50px;
+    color: $blue;
+    border-color: $blue;
   }
 }
 
-@media (max-width: $tablet-width) {
+@media (max-width: $desktop-width - 1) {
   .button--big {
     padding: 18px 31px;
   }
 }
 
-@media (max-width: $mobile-width) {
+@media (max-width: $tablet-width - 1) {
   .button--big {
     width: 100%;
     box-sizing: border-box;
