--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -10,6 +10,16 @@
       display: block;
     }
   }
+
+  a:hover {
+    // color: $dark-grey;
+    opacity: 0.8;
+  }
+
+  a:active,
+  a:focus {
+    opacity: 0.5;
+  }
 }
 
 .page-footer__logo {
@@ -20,25 +30,37 @@
   display: none;
 }
 
+@media (min-width: $desktop-width - 1 + 1) {
+  .page-footer__top {
+    @include outer-wrapper;
+  }
+
+  .page-footer__columns {
+    @include inner-wrapper;
+  }
+
+  .page-footer__col--menu {
+    width: 29vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .page-footer__top {
   padding-bottom: 58px;
   border-bottom: 1px solid rgba($grey, 0.2);
 }
 
 .page-footer__columns {
-  display: flex;
-  justify-content: space-between;
-}
-
-.page-footer__wrapper {
-  display: flex;
-  justify-content: space-between;
+  @include inner-wrapper;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .page-footer__intro {
-  margin-right: 11.5%;
   display: flex;
   flex-direction: column;
+  padding-right: 5vw;
 
   span {
     display: none;
@@ -47,26 +69,46 @@
 
 .page-footer__social {
   margin: 0;
+  list-style: none;
+  display: flex;
+  padding: 0;
 }
 
-.page-footer__title {
-  margin: 0 0 26px 0;
-  padding-left: 5px;
+.page-footer__social-item {
+  &:not(:last-child) {
+    margin-right: 15px;
+  }
 
-  @include roboto-regular(15px, 16px);
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
+  a {
+    font-size: 0;
+  }
+
+  a:hover svg path {
+    fill: $dark-grey;
+  }
+
+  a:active,
+  a:focus svg path {
+    fill: $lighter-grey;
+  }
+}
+
+
+.page-footer__col {
+  h3 {
+    margin: 0 0 26px 0;
+    padding-left: 5px;
+
+    @include roboto-regular(15px, 16px);
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+  }
 }
 
 .page-footer__list {
   list-style: none;
   margin: 0;
   padding: 0;
-
-  &--cols {
-    columns: 120px 2;
-    column-gap: 76px;
-  }
 
   li {
     @include ptmono(15px, 25px);
@@ -77,34 +119,22 @@
       text-decoration: none;
     }
   }
-}
 
-.page-footer__contacts {
-  margin-left: 5%;
-}
-
-.page-footer__copyright {
-  @include wrapping;
-  padding-top: 14px;
-  padding-bottom: 14px;
-}
-
-@media (min-width: $tablet-width + 1) {
-  .page-footer__top {
-    @include wrapping;
+  &--cols {
+    column-count: 2;
+    column-gap: 76px;
   }
 }
 
-@media (min-width: $mobile-width + 1) and (max-width: $tablet-width) {
+@media (min-width: $tablet-width) and (max-width: $desktop-width - 1) {
   .page-footer__wrapper {
     width: 100%;
 
-    @include wrapping;
-    display: flex;
+    @include outer-wrapper;
   }
 }
 
-@media (max-width: $tablet-width) {
+@media (max-width: $desktop-width - 1) {
   .page-footer {
     padding-top: 0;
   }
@@ -118,18 +148,20 @@
   }
 
   .page-footer__columns {
+    display: flex;
     flex-wrap: wrap;
+    padding: 0;
   }
 
   .page-footer__intro {
-    width: 100%;
     margin-right: 0;
+    width: 100%;
     padding-top: 20px;
     padding-bottom: 25px;
     flex-direction: row;
     align-items: center;
 
-    @include wrapping;
+    @include outer-wrapper;
 
     border-bottom: 1px solid rgba($grey, 0.2);
 
@@ -152,26 +184,27 @@
   }
 
   .page-footer__col {
+    @include outer-wrapper;
     padding-top: 38px;
-  }
 
-  .page-footer__menu {
-    margin-right: -10px;
+    &--menu {
+      width: 42%;
+    }
+
+    &--contacts {
+      flex-grow: 1;
+    }
   }
 
   .page-footer__list--cols {
     column-count: 1;
   }
-
-  .page-footer__copyright {
-    padding-top: 19px;
-    padding-bottom: 19px;
-  }
 }
 
-@media (max-width: $mobile-width) {
+@media (max-width: $tablet-width - 1) {
   .page-footer__top {
     padding-bottom: 0;
+
     border: none;
   }
 
@@ -191,26 +224,24 @@
   }
 
   .page-footer__col {
+    width: 100%;
     border-bottom: 1px solid rgba($grey, 0.2);
     position: relative;
 
-    @include wrapping;
+    @include outer-wrapper;
     padding-top: 30px;
     padding-bottom: 23px;
+
+    h3 {
+      margin-bottom: 2px;
+      padding-left: 0;
+    }
   }
 
-  .page-footer__menu {
-    margin-right: 0;
-  }
-
-  .page-footer__contacts {
-    margin: 0;
-  }
-
-  .page-footer__title {
-    margin-bottom: 2px;
-    padding-left: 0;
-  }
+  // .page-footer__col--menu,
+  // .page-footer__col--contacts {
+  //   margin: 0;
+  // }
 
   .page-footer__list {
     display: none;
