--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,41 +1,42 @@
 .page-header {
-  min-height: 300px;
+  @include outer-wrapper;
+  padding: 33px 0;
   position: relative;
   z-index: 2;
-  margin-bottom: -300px;
-
-  @include wrapping;
 
   background-color: transparent;
 }
 
-.page-header__nav {
-  padding-top: 33px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+.page-header__wrapper {
+  @include inner-wrapper;
+  padding-left: 12px;
+  padding-right: 17px;
 }
 
 .page-header__logo {
-  font-size: 0;
-
   display: block;
-  margin: 0;
+  margin-right: auto;
   padding: 0;
+
+  font-size: 0;
 }
 
 
-@media (max-width: $tablet-width) {
-  .page-header__nav {
+@media (max-width: $desktop-width - 1) {
+  .page-header {
     padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .page-header__wrapper {
+    display: flex;
+    padding: 0;
   }
 }
 
-@media (max-width: $mobile-width) {
-  .page-header__nav {
-    margin-bottom: 232px;
-    padding-top: 17px;
+@media (max-width: $tablet-width - 1) {
+  .page-header {
+    padding-top: 16px;
   }
 
   .page-header__logo-image {
