--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -19,17 +19,29 @@
   line-height: $line-height;
 }
 
-@mixin wrapping() {
-  padding-right: 13.4%;
-  padding-left: 13.1%;
+@mixin outer-wrapper() {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $desktop-width - 1) {
     padding-right: 25px;
     padding-left: 25px;
   }
 
-  @media (max-width: $mobile-width) {
-    padding-right: 17px;
+  @media (max-width: $tablet-width - 1) {
+    padding-right: 15px;
     padding-left: 17px;
+  }
+}
+
+@mixin inner-wrapper() {
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
