--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,12 +2,15 @@
 @import "variables.scss";
 @import "normalize.scss";
 @import "mixins.scss";
+@import "scaffolding.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/top-background.scss";
 @import "blocks/page-header.scss";
 @import "blocks/contacts.scss";
 @import "blocks/button.scss";
 @import "blocks/promo.scss";
 @import "blocks/advantages.scss";
+@import "blocks/about.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
