--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,8 +6,8 @@ $dark-grey: #666666;
 $light-grey :#c4c4c4;
 $lighter-grey: #ebebeb;
 
-$mobile-width: 767px;
-$tablet-width: 1023px;
+$tablet-width: 768px;
+$desktop-width: 1024px;
 
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
