--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -1,6 +1,7 @@
 .production {
   @include outer-wrapper;
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 112px;
 
   background-color: $dark-blue;
 }
@@ -33,30 +34,10 @@
   box-sizing: border-box;
   padding: 0 15px;
 
-  &::after {
-    position: absolute;
-    right: 15px;
-    bottom: 0;
-    width: 63px;
-    height: 63px;
-
-    content: "";
-    background-image: url("../img/square-link.svg");
-  }
-
   a {
     @include roboto-regular(20px, 30px);
     color: $white;
     text-decoration: none;
-
-    &:hover {
-      opacity: 0.4;
-    }
-
-    &:active,
-    &:focus {
-      opacity: 0.6;
-    }
   }
 
   h3 {
@@ -77,6 +58,26 @@
 
   background-position: top center;
   background-repeat: no-repeat;
+
+  &::after {
+    position: absolute;
+    right: 15px;
+    bottom: 0;
+    width: 63px;
+    height: 63px;
+
+    content: "";
+    background-image: url("../img/square-link.svg");
+  }
+
+  &:hover {
+    opacity: 0.4;
+  }
+
+  &:active,
+  &:focus {
+    opacity: 0.6;
+  }
 
   &--product {
     background-image: url("../img/product-desktop.png");
@@ -138,17 +139,17 @@
       top: 21px;
       left: 43px;
     }
-
-    &::after {
-      right: 0;
-      bottom: 0;
-    }
   }
 
   .production__item {
     width: 100%;
     height: 256px;
     background-size: cover;
+
+    &::after {
+      right: 0;
+      bottom: 0;
+    }
 
     &--product {
       background-image: url("../img/product-tablet.png");
