--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,9 +9,11 @@
 @import "blocks/contacts.scss";
 @import "blocks/button.scss";
 @import "blocks/promo.scss";
+@import "blocks/middle-background.scss";
 @import "blocks/advantages.scss";
 @import "blocks/about.scss";
 @import "blocks/production.scss";
+@import "blocks/callback.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
