--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,7 @@ $white: #ffffff;
 $grey: #626962;
 $dark-grey: #666666;
 $light-grey :#c4c4c4;
+$alter-light-grey: #cdcdcd;
 $lighter-grey: #ebebeb;
 
 $tablet-width: 768px;
